// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormControlLayout is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFormControlLayout testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <input />
  </div>
</div>
`;

exports[`EuiFormControlLayout props clear onClick is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
    >
      <button
        aria-label="Clear input"
        class="euiFormControlLayoutClearButton customClass"
        data-test-subj="clearButton"
        type="button"
      >
        <svg
          class="euiIcon euiIcon--medium euiFormControlLayoutClearButton__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiFormControlLayout props fullWidth is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  />
</div>
`;

exports[`EuiFormControlLayout props icon is rendered as a string 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.378 1.496l6.695 10.984A1 1 0 0 1 14.22 14H1.667a1 1 0 0 1-.883-1.47L6.642 1.545a1 1 0 0 1 1.736-.05zm-.853.52L1.667 13h12.552L7.525 2.016zM7.14 10.06L6.9 5.18h1.3l-.25 4.878h-.81zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFormControlLayout props icon is rendered as an object 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon customClass"
        data-test-subj="myIcon"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.378 1.496l6.695 10.984A1 1 0 0 1 14.22 14H1.667a1 1 0 0 1-.883-1.47L6.642 1.545a1 1 0 0 1 1.736-.05zm-.853.52L1.667 13h12.552L7.525 2.016zM7.14 10.06L6.9 5.18h1.3l-.25 4.878h-.81zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFormControlLayout props icon side left is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.378 1.496l6.695 10.984A1 1 0 0 1 14.22 14H1.667a1 1 0 0 1-.883-1.47L6.642 1.545a1 1 0 0 1 1.736-.05zm-.853.52L1.667 13h12.552L7.525 2.016zM7.14 10.06L6.9 5.18h1.3l-.25 4.878h-.81zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFormControlLayout props icon side right is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.378 1.496l6.695 10.984A1 1 0 0 1 14.22 14H1.667a1 1 0 0 1-.883-1.47L6.642 1.545a1 1 0 0 1 1.736-.05zm-.853.52L1.667 13h12.552L7.525 2.016zM7.14 10.06L6.9 5.18h1.3l-.25 4.878h-.81zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFormControlLayout props isLoading is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
    >
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
  </div>
</div>
`;

exports[`EuiFormControlLayout props multiple appends are rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  />
  <span
    class="euiFormControlLayout__append"
  >
    1
  </span>
  <span
    class="euiFormControlLayout__append"
  >
    2
  </span>
</div>
`;

exports[`EuiFormControlLayout props multiple prepends are rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group"
>
  <span
    class="euiFormControlLayout__prepend"
  >
    1
  </span>
  <span
    class="euiFormControlLayout__prepend"
  >
    2
  </span>
  <div
    class="euiFormControlLayout__childrenWrapper"
  />
</div>
`;

exports[`EuiFormControlLayout props one append is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  />
  <span
    class="euiFormControlLayout__append"
  >
    1
  </span>
</div>
`;

exports[`EuiFormControlLayout props one prepend is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group"
>
  <span
    class="euiFormControlLayout__prepend"
  >
    1
  </span>
  <div
    class="euiFormControlLayout__childrenWrapper"
  />
</div>
`;
